# datagouv-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
datagouv/: __init__.py  _data_requestor.py  _datagouv_client.py  _datasets_service.py  main.py
datagouv/api_client/: _data_requestor.py  _datagouv_client.py  _datasets_service.py
datagouv/downloader/: _resources_downloader.py  _resources_downloader__test.py  _utils.py
examples/: Examples.ipynb  README.md
src/: DataRequestor.py  DatagouvClient.py  DatasetsService.py  __init__.py  main.py  version.py
