[tool.poetry]
name = "datagouv-python"
version = "0.0.4"
description = ""
authors = ["Maxime Pawlak <maxime.pawlak@amatek.fr>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
start = "src.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
